<resources>
    <string name="app_name">Farmlite</string>
    <string name="signup">SignUp</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="google">Google</string>
    <string name="signup_with_facebook">Signup with Facebook</string>
    <string name="email_error">Enter valid email</string>
    <string name="password_error">Enter password. Length should be minimum 8 characters</string>
    <string name="cpassword_error">Password doesn\'t match</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="logout">Logout</string>
    <string name="device_info">Device Info</string>
    <string name="location_id">Location ID</string>
    <string name="devices">Devices</string>
    <string name="auto_chicken_door_lock">Auto Chicken Door Lock</string>
    <string name="offline">Offline</string>
    <string name="device_id">Device Id</string>
    <string name="device_address">Device Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_schedule">Set Schedule</string>
    <string name="device">Device</string>
    <string name="time">Time</string>
    <string name="end">End</string>
    <string name="_5_40_am">5:40 AM</string>
    <string name="everyday">Everyday</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="online">Online</string>
    <string name="farmlite_welcomes_you">FarmLite Welcomes \n You</string>
    <string name="connect_to_farmlite_door">Connect to FarmLite Door</string>
    <string name="faq">FAQ</string>
    <string name="contact_farmlite">Contact FarmLite</string>
    <string name="current_status">Current Status : </string>
    <string name="dashboard">Dashboard</string>
    <string name="t_t">T-T</string>
    <string name="t_l">T-L</string>
    <string name="l_t">L-T</string>
    <string name="l_l">L-L</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="wifi_ssid">Wifi SSID</string>
    <string name="wifi_password">Wifi Password</string>
    <string name="set_credentials">Set Credentials</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="onboarding_header_1">Control Your Coop\nDoor from Anywhere</string>
    <string name="onboarding_detail_1">Open or close your chicken coop door\nanytime using your smartphone—no need\nto step outside.</string>
    <string name="onboarding_header_2">Connect Your FarmLite\nDoor to Get Started</string>
    <string name="onboarding_detail_2">Use Bluetooth to pair your device, then link\nit to your home Wi-Fi for full control.</string>
    <string name="onboarding_header_3">Control Your Coop\nDoor Automatically</string>
    <string name="onboarding_detail_3">Set your coop door to open and close\nautomatically based on time, light, or both\n—whatever works best for you.</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember me</string>
    <string name="or">or</string>
    <string name="create_account">Create Account</string>
    <string name="fill_in_your_details_to_get_started">Fill in your details to get started.</string>
    <string name="full_name">Full Name</string>
    <string name="i_agree_to">I agree to</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="otp_detail_text">We have sent the OTP verification code\nto your provided email address. Enter\nthe code below.</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="resend_code">Resend code</string>
    <string name="verification_success">Your account has been successfully\nverified.</string>
    <string name="verification_complete">Verification Complete!</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="contact_support">Contact Support</string>
    <string name="delete_account">Delete Account</string>
    <string name="privacy_amp_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="app_settings">App Settings</string>
    <string name="let_s_manage_your_devices">Let’s manage your devices!</string>
    <string name="connect_farmlite_device">Connect FarmLite Device</string>
    <string name="pair_your_farmlite_device">Pair Your FarmLite Device</string>
    <string name="check_programming">Check Programming</string>
    <string name="view_connected_devices">View Connected Devices</string>
    <string name="near_by_devices">Near by Devices</string>
    <string name="searching_for_nearby_devices">Searching for\nNearby Devices...</string>
    <string name="connect_via_bluetooth">Connect Via Bluetooth</string>
    <string name="make_sure_your_farmlite_device_is_npowered_on_and_nearby_to_connect">Make sure your FarmLite device is\npowered on and nearby to connect</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="via_bluetooth">via Bluetooth.</string>
    <string name="nearby_devices">Nearby Devices</string>
    <string name="device_connected">Device Connected!</string>
    <string name="let_s_set_up_wi_fi_to_keep_it_nonline">Let’s set up Wi-Fi to keep it\nonline.</string>
    <string name="continue_to_wifi_setup">Continue to WiFi Setup</string>
    <string name="wi_fi_setup">Wi-Fi Setup</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="set_up_wi_fi">Set Up Wi-Fi</string>
    <string name="wi_fi_name">Wi-Fi Name</string>
    <string name="connect">Connect</string>
    <string name="wi_fi_connected">Wi-Fi Connected!</string>
    <string name="you_re_all_set_now_program_nyour_door_or_check_its_nstatus">You’re all set. Now program\nyour door or check its\nstatus.</string>
    <string name="_continue">Continue</string>
</resources>
