<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:elevation="@dimen/_5sdp"
    android:background="@color/white"
    app:cardBackgroundColor="@color/card_bg_color"
    app:cardCornerRadius="@dimen/_10sdp"
    app:contentPadding="@dimen/_5sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/dark_text_color"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:src="@drawable/ic_clock"
            app:layout_constraintStart_toEndOf="@id/tvTimeTitle"
            app:layout_constraintTop_toTopOf="@id/tvTimeTitle" />

        <TextView
            android:id="@+id/tvEndTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/dark_text_color"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTimeTitle" />

        <TextView
            android:id="@+id/tvEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/_5_40_am"
            app:layout_constraintBottom_toBottomOf="@id/tvEndTitle"
            app:layout_constraintStart_toEndOf="@id/tvEndTitle"
            app:layout_constraintTop_toTopOf="@id/tvEndTitle" />

        <LinearLayout
            android:id="@+id/llUpDownBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/tvEndTime"
            app:layout_constraintTop_toTopOf="@id/tvEndTime">

            <ImageView
                android:id="@+id/ivUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:src="@drawable/ic_up" />

            <ImageView
                android:id="@+id/ivDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@drawable/ic_down" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llWeekDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/llUpDownBtn"
            app:layout_constraintStart_toEndOf="@id/llUpDownBtn"
            app:layout_constraintTop_toTopOf="@id/llUpDownBtn">

            <TextView
                android:id="@+id/tvMonday"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/m"
                android:textColor="@color/dark_text_color"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvTuesday"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/t"
                android:background="@drawable/selected_day_bg"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvWednesday"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/w"
                android:textColor="@color/dark_text_color"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvThursday"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/t"
                android:textColor="@color/dark_text_color"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvFriday"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/f"
                android:textColor="@color/dark_text_color"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvSaturday"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/s"
                android:background="@drawable/selected_day_bg"
                android:textColor="@color/white"                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvSunday"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/s"
                android:textColor="@color/dark_text_color"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/llWeekDays"
            app:layout_constraintStart_toEndOf="@id/llWeekDays"
            app:layout_constraintTop_toTopOf="@id/llWeekDays" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/everyday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEndTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>